--- a/index.html
+++ b/index.html
@@ -24,6 +24,31 @@
         <p>The student of iut with id: U2110284</p>
         
         <h2>
+            Subjects I study in IUT
+        </h2>
+
+        <ul>
+            <li>
+                Physics 1
+            </li>
+            <li>
+                Calculus 1
+            </li>
+            <li>
+                Intro to IT
+            </li>
+            <li>
+                Academic English
+            </li>
+            <li>
+                Academic English Reading
+            </li>
+            <li>
+                Object Oriented Programming
+            </li>
+        </ul>
+
+        <h2>
             My favourites
         </h2>
 
@@ -58,6 +83,17 @@
         <p class="aligncenter">
             <img src="images\image.jpg" alt="centered image" />
         </p>
-        
+
+        <h2>
+            Fun facts about my <bold>neighbour</bold>(s)
+        </h2>
+        <ul>
+            <li>
+                Umidjon Ziyodullayev could not find fun fact about himself
+            </li>
+            <li>
+                My every neighbour is temporary except Umidjon Ziyodullayev
+            </li>
+        </ul>
     </body>
 </html>
