--- a/certificate.html
+++ b/certificate.html
@@ -88,10 +88,10 @@
                         </div>
                         <div style="float: left; width: 65%;">
                                 <form method="get" class="signup-form">
-                                        <label><h3> Enter candidate ID: <input id="name" type="text"></h3></label>
-                                        <label><h3> Enter CEFR Level: <input id="fname" type="text"></h3></label>
-                                        <label><h3> Candidate number: <input id="passport" type="text"></h3></label>
-                                        <label><h3> Enter Test Report Form Numbere: <input type="text" id="pnfl"></h3></label>
+                                        <label><h3> Enter candidate ID: <input id="name" type="text"></h3></label><br>
+                                        <label><h3> Enter CEFR Level: <input id="fname" type="text"></h3></label><br>
+                                        <label><h3> Candidate number: <input id="passport" type="text"></h3></label><br>
+                                        <label><h3> Enter Test Report Form Numbere: <input type="text" id="pnfl"></h3></label><br>
                                         <button type="submit">Tekshirish</button>
                                         <!-- <input type="submit" value="Submit" role="button" href="/turarjoy.html"> -->
                                 </form>
