--- a/certificate.html
+++ b/certificate.html
@@ -161,7 +161,7 @@
                         <span class="visually-hidden">Next</span>
                 </button>
         </div>
-        <h2 style="text-align: center;"> <a href="/turarjoy.html">Keyingisi</a> </h2>
+        <h2 style="text-align: center;"> <a href="/univer.html">Keyingisi</a> </h2>
         <script src="/javascript.js"></script>
 </body>
 
