--- a/univer.html
+++ b/univer.html
@@ -140,7 +140,7 @@
                                                         aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                                Rõyxatdan muvoffaqiyatli ya'kunlandi
+                                                Rõyxatdan õtish muvoffaqiyatli ya'kunlandi
                                         </div>
                                         <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary"
